# soft3410-2022

./: .gitignore  CMakeLists.txt  README.md  main.h
hw1/: dynamic_array_map.c  dynamic_array_map.h
hw2/: gnuplot_false_sharing.txt  graph_false_sharing.bash  matrix.c
nbody/: nbody.c  nbody.h
student/: Makefile  graph_false_sharing.bash  kang_false_sharing.c  quanhao_false.c  quanhao_non_false.c
week10/: disk.c  dna.c  pool.c  run.c
week10/fasta/: sample.output  sample1.in  sample1.output  sample2.in
week2/: flip.c  linkedlist_map.c  linkedlist_map.h  sorting.c  sorting.h  stack.c  stack.h
week3/: data.txt  gnuplot.txt  perf_qn.c  resize_nn.c  run_perf_qn.bash  unrolling_qn.c
week4/: Makefile  false_sharing.c  gnuplot.txt  gnuplot_false_sharing.txt  gnuplot_locks.txt  graph_false_sharing.bash  graph_locks.bash  matrix.c  parallel_sum.c  safe_list.c  welcome.c
week5/: access.c  ham.c  mqsort.c  perf_access.bash  processes.c
week6/: Makefile  atom.c  gnuplot_atom.txt  graph_atom.bash  linkedlist.c  linkedlist_slow.c  phil.c  sem_vs_mutex.c  spin.c  spin.h  sum.c
week7/: atom_main.c  atom_stack.c  atom_stack.h  dynamic_array.c  mutex_stack.c  ref.c  ref.h
week8/: Makefile  busy.c  busy.h  dynamic_array.c  ftp.c  gnuplot_locks.txt  graph_locks.bash  thread_pool.c
week9/: SDL_test.c  hello.c  intersection.c  multiply.c  pool.c  sum.c  sum.i  sum.s
